fixing footer too close the last suggestion

--- a/public/css/allSuggestion.css
+++ b/public/css/allSuggestion.css
@@ -7,6 +7,7 @@
     float: left;
     margin-left: 10%;
     margin-top: 2%;
+    margin-bottom: 2%;
     width: 35%;
     height: 50%;
 }
